--- a/package.json
+++ b/package.json
@@ -13,7 +13,11 @@
     "react": "^19.2.0",
     "recharts": "^3.5.1",
     "react-dom": "^19.2.0",
-    "react-router-dom": "^7.9.6"
+    "react-router-dom": "^7.9.6",
+    "zod": "3.22.4",
+    "react-hook-form": "7.51.0",
+    "@tanstack/react-query": "5.28.4",
+    "@hookform/resolvers": "^5.2.2"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
