--- a/package.json
+++ b/package.json
@@ -17,7 +17,10 @@
     "zod": "3.22.4",
     "react-hook-form": "7.51.0",
     "@tanstack/react-query": "5.28.4",
-    "@hookform/resolvers": "^5.2.2"
+    "@hookform/resolvers": "^5.2.2",
+    "jspdf": "2.5.1",
+    "jspdf-autotable": "3.8.2",
+    "xlsx": "0.18.5"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
