--- a/package.json
+++ b/package.json
@@ -9,29 +9,22 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@hookform/resolvers": "^5.2.2",
-    "@tanstack/react-query": "5.28.4",
-    "jspdf": "2.5.1",
-    "jspdf-autotable": "3.8.2",
     "lucide-react": "^0.555.0",
     "react": "^19.2.0",
-    "react-dom": "^19.2.0",
-    "react-hook-form": "7.51.0",
-    "react-router-dom": "^7.9.6",
     "recharts": "^3.5.1",
-    "xlsx": "0.18.5",
-    "zod": "3.22.4"
+    "react-dom": "^19.2.0",
+    "react-router-dom": "^7.9.6",
+    "zod": "3.22.4",
+    "react-hook-form": "7.51.0",
+    "@tanstack/react-query": "5.28.4",
+    "@hookform/resolvers": "^5.2.2",
+    "jspdf": "2.5.1",
+    "jspdf-autotable": "3.8.2",
+    "xlsx": "0.18.5"
   },
   "devDependencies": {
-    "@types/bcryptjs": "^2.4.6",
-    "@types/cors": "^2.8.19",
-    "@types/express": "^5.0.6",
-    "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^22.14.0",
     "@vitejs/plugin-react": "^5.0.0",
-    "nodemon": "^3.1.11",
-    "prisma": "^7.0.1",
-    "tsx": "^4.21.0",
     "typescript": "~5.8.2",
     "vite": "^6.2.0"
   }
