--- a/package.json
+++ b/package.json
@@ -9,22 +9,38 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "lucide-react": "^0.555.0",
-    "react": "^19.2.0",
-    "recharts": "^3.5.1",
-    "react-dom": "^19.2.0",
-    "react-router-dom": "^7.9.6",
-    "zod": "3.22.4",
-    "react-hook-form": "7.51.0",
-    "@tanstack/react-query": "5.28.4",
     "@hookform/resolvers": "^5.2.2",
+    "@prisma/client": "^7.0.1",
+    "@tanstack/react-query": "5.28.4",
+    "bcryptjs": "^3.0.3",
+    "cookie-parser": "^1.4.7",
+    "cors": "^2.8.5",
+    "dotenv": "^17.2.3",
+    "express": "^5.2.1",
+    "jsonwebtoken": "^9.0.2",
     "jspdf": "2.5.1",
     "jspdf-autotable": "3.8.2",
-    "xlsx": "0.18.5"
+    "lucide-react": "^0.555.0",
+    "react": "^19.2.0",
+    "react-dom": "^19.2.0",
+    "react-hook-form": "7.51.0",
+    "react-router-dom": "^7.9.6",
+    "recharts": "^3.5.1",
+    "xlsx": "0.18.5",
+    "zod": "3.22.4"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.6",
+    "@types/cookie-parser": "^1.4.10",
+    "@types/cors": "^2.8.19",
+    "@types/express": "^5.0.6",
+    "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^22.14.0",
     "@vitejs/plugin-react": "^5.0.0",
+    "effect": "^3.19.8",
+    "prisma": "^7.0.1",
+    "ts-node": "^10.9.2",
+    "tsx": "^4.21.0",
     "typescript": "~5.8.2",
     "vite": "^6.2.0"
   }
