--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^5.2.2",
-    "@prisma/client": "^7.0.1",
+    "@prisma/client": "6.19.0",
     "@tanstack/react-query": "5.28.4",
     "bcryptjs": "^3.0.3",
     "cookie-parser": "^1.4.7",
@@ -41,7 +41,7 @@
     "@types/node": "^22.14.0",
     "@vitejs/plugin-react": "^5.0.0",
     "effect": "^3.19.8",
-    "prisma": "^7.0.1",
+    "prisma": "6.19.0",
     "ts-node": "^10.9.2",
     "tsx": "^4.21.0",
     "typescript": "~5.8.2",
