feat: Implement user authentication with client-side context, server-side controllers, and a new dashboard page.

--- a/package.json
+++ b/package.json
@@ -12,9 +12,10 @@
     "db:generate": "npx prisma generate"
   },
   "dependencies": {
-    "@hookform/resolvers": "^5.2.2",
+    "@hookform/resolvers": "^3.10.0",
     "@prisma/client": "6.19.0",
     "@tanstack/react-query": "5.28.4",
+    "axios": "^1.13.2",
     "bcryptjs": "^3.0.3",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
@@ -27,10 +28,11 @@
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-hook-form": "7.51.0",
+    "react-is": "^19.2.0",
     "react-router-dom": "^7.9.6",
     "recharts": "^3.5.1",
     "xlsx": "0.18.5",
-    "zod": "3.22.4"
+    "zod": "^3.25.76"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
